# ekodb-client

./: .gitignore  .prettierignore  COMMANDS.md  COMPRESSION.md  Cargo.toml  LICENSE  MISSING_FEATURES.md  Makefile  PARITY_MATRIX.md  PLAN_v0.15.1.md  PLAN_v0.16.0.md  README.md  README_Test_Plan.md  TODO.md  examples_list.txt  package-lock.json  package.json  rust-toolchain.toml  test-examples-rag.md  tests_list.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: examples-inventory.yml  go.yml  nodejs.yml  publish.yml  python.yml  unit-tests.yml
clients/go/: .golangci.yml  Makefile  README.md
clients/nodejs/: .eslintrc.js  .gitignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
clients/python/: README.md  pyproject.toml  pytest.ini  setup.py
clients/python/ekodb/: __init__.py  client.py  errors.py  types.py  utils.py
clients/python/examples/: test.py
clients/python/tests/: __init__.py  conftest.py  test_client.py  test_errors.py  test_types.py  test_utils.py
ekodb-client-kt/: .editorconfig  .gitignore  PUBLISHING.md  QUICKSTART.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  setup-publishing.sh
ekodb-client-py/: Cargo.toml  README.md  pyproject.toml
ekodb-client-py/python/ekodb_client/: __init__.py  join.py  query_builder.py  schema_builder.py  stages.py  utils.py
ekodb-client-py/src/: lib.rs
ekodb-client-py/tests/: test_agents.py  test_batch_transaction_id.py  test_chat_user_functions.py  test_client_kv_batch.py  test_collections.py  test_distinct_values.py  test_goals_tasks_agents.py  test_health.py  test_join.py  test_kv_links.py  test_projection.py  test_query_builder.py  test_raw_completion.py  test_schedules.py  test_schema_builder.py  test_stages.py  test_transactional_bypass_ripple.py  test_utils.py  test_version.py  test_websocket.py
ekodb-client-ts/: README.md  package-lock.json  package.json  tsconfig.json
ekodb-client-ts/src/: client.test.ts  client.ts  functions.test.ts  functions.ts  index.ts  join.ts  query-builder.test.ts  query-builder.ts  schema.ts  search.ts  swr.test.ts  utils.test.ts  utils.ts  websocket.test.ts
ekodb_client/: CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md
ekodb_client/src/: auth.rs  batch.rs  chat.rs  client.rs  error.rs  functions.rs  health.rs  http.rs  lib.rs  query_builder.rs  retry.rs  schema.rs  schema_cache.rs  search.rs  types.rs  utils.rs  websocket.rs
ekodb_client/tests/: integration_test.rs  projection_tests.rs  unit_tests.rs
examples/: README.md  requirements.txt  run_tests.sh  test-examples.md
examples/go/: README.md  batch_operations.go  bypass_ripple_example.go  client_advanced_crud.go  client_batch_operations.go  client_chat_advanced.go  client_chat_basic.go  client_chat_message_stream.go  client_chat_models.go  client_chat_sessions.go  client_collection_management.go  client_collection_utils.go  client_concurrency_stages.go  client_convenience_methods.go  client_crypto_stages.go  client_distinct_values.go  client_document_ttl.go  client_edge_cache.go  client_function_composition.go  client_functions.go  client_functions_advanced.go  client_functions_ai.go  client_functions_complete.go  client_functions_crud.go  client_functions_kv_wrapped.go  client_functions_search.go  client_goal_templates.go  client_goals_tasks_agents.go  client_joins.go  client_jwt_auth_flow.go  client_kv_links.go  client_kv_operations.go  client_kv_precision.go  client_path_routed_function.go  client_query_builder.go  client_raw_completion_stream.go  client_schedules.go  client_schema.go  client_search.go  client_simple_crud.go  (+23 more)
examples/javascript/: README.md  batch_operations.js  client_batch_operations.js  client_chat_advanced.js  client_chat_basic.js  client_chat_models.js  client_chat_sessions.js  client_collection_management.js  client_document_ttl.js  client_edge_cache.js  client_function_composition.js  client_functions.js  client_functions_advanced.js  client_functions_ai.js  client_functions_complete.js  client_functions_crud.js  client_functions_kv_wrapped.js  client_functions_search.js  client_joins.js  client_kv_operations.js  client_query_builder.js  client_schema.js  client_search.js  client_simple_crud.js  client_simple_websocket.js  client_swr_native.js  client_swr_pattern.js  client_transactions.js  client_websocket_ttl.js  collection_management.js  crud_functions.js  crud_scripts.js  document_ttl.js  http_functions.js  kv_operations.js  package-lock.json  package.json  projection_example.js  rag_conversation_system.js  simple_crud.js  (+5 more)
examples/kotlin/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts  test-examples-kt.md  transactions.kt
examples/rust/: Cargo.toml  README.md  test-examples-rs.md
examples/rust/examples/: batch_operations.rs  bypass_ripple_example.rs  client_advanced_crud.rs  client_batch_operations.rs  client_chat_advanced.rs  client_chat_basic.rs  client_chat_message_stream.rs  client_chat_models.rs  client_chat_sessions.rs  client_collection_management.rs  client_collection_utils.rs  client_concurrency_stages.rs  client_convenience_methods.rs  client_crypto_stages.rs  client_distinct_values.rs  client_document_ttl.rs  client_edge_cache.rs  client_function_composition.rs  client_functions.rs  client_functions_advanced.rs  client_functions_ai.rs  client_functions_complete.rs  client_functions_crud.rs  client_functions_kv_wrapped.rs  client_functions_search.rs  client_goal_templates.rs  client_goals_tasks_agents.rs  client_joins.rs  client_jwt_auth_flow.rs  client_kv_links.rs  client_kv_operations.rs  client_kv_precision.rs  client_path_routed_function.rs  client_query_builder.rs  client_raw_completion_stream.rs  client_schedules.rs  client_schema.rs  client_schema_management.rs  client_search.rs  client_simple_crud.rs  (+23 more)
scripts/: PUBLISHING.md  QUICK_PUBLISH.md  README.md  check-publish-ready.sh  generate_examples_list.sh  pre-commit  publish-all.sh  publish-kotlin.sh  publish-python.sh  publish-rust.sh  publish-typescript.sh  sync-versions.sh  update_examples_badge.sh
(+238 files in other folders)
