[workspace]
members = [
    "ekodb_client",
]
exclude = [
    "examples/rust",
    "ekodb-client-py",  # Python package, built with maturin
]
resolver = "3"

[workspace.package]
rust-version = "1.85"

[workspace.dependencies]
# Shared dependencies across workspace members
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip", "stream"], default-features = false }
chrono = { version = "0.4.44", features = ["serde"] }
rust_decimal = "1.41.0"
uuid = { version = "1.23.1", features = ["serde", "v4"] }
thiserror = "2.0.18"
base64 = "0.22.1"
log = "0.4.29"
