[package]
name = "ekodb-client-py"
version = "0.17.0"
edition = "2021"
authors = ["ekoDB Team"]
description = "Python bindings for ekoDB client library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ekoDB/ekodb"

[lib]
name = "ekodb_client"
crate-type = ["cdylib"]

[dependencies]
# Path for local development; version used when publishing to crates.io
ekodb_client = { version = "0.17.0", path = "../ekodb_client", default-features = false }
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py38"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
tokio = { version = "1.52", features = ["full"] }
serde_json = "1.0"

[build-dependencies]
pyo3-build-config = "0.27"

[features]
default = ["rustls"]
rustls = ["ekodb_client/rustls"]
native-tls = ["ekodb_client/native-tls"]
