[package]
name = "ekodb-client-py"
version = "0.22.0"
edition = "2021"
authors = ["ekoDB Team"]
description = "Python bindings for ekoDB client library"
license = "MIT"
repository = "https://github.com/ekoDB/ekodb-client"

[lib]
name = "ekodb_client"
# rlib is added so `cargo test` can build a test harness against the crate;
# cdylib is the artifact maturin packages as the Python extension module.
crate-type = ["cdylib", "rlib"]
# No doctests live in this crate. Disabling them avoids an rlib-name collision:
# this crate's lib is also named `ekodb_client` (the Python module name), which
# clashes with the `ekodb_client` dependency crate when rustdoc links the test.
doctest = false

[dependencies]
# Path for local development; version used when publishing to crates.io
ekodb_client = { version = "0.22.0", path = "../ekodb_client", default-features = false }
# `extension-module` is enabled by default (the maturin build) but turned OFF
# for `cargo test --no-default-features --features test-support` so the test
# binary can link libpython and use `auto-initialize`.
pyo3 = { version = "0.29", features = ["abi3-py38"] }
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }
tokio = { version = "1.52", features = ["full"] }
serde_json = "1.0"
chrono = "0.4.45"
rust_decimal = "1.42.1"
uuid = { version = "1.23.3", features = ["v4"] }

[build-dependencies]
pyo3-build-config = "0.29"

[features]
default = ["rustls", "extension-module"]
rustls = ["ekodb_client/rustls"]
native-tls = ["ekodb_client/native-tls"]
# Enabled for the normal maturin build; disabled for `cargo test` so libpython
# is linked instead of being treated as an external symbol.
extension-module = ["pyo3/extension-module"]
# Enables a real Python interpreter inside `cargo test` for round-trip tests.
test-support = ["pyo3/auto-initialize"]
