[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ekodb_client"
version = "0.14.0"
description = "Python client for ekoDB - a high-performance document database"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
keywords = ["database", "ekodb", "document-database", "nosql"]
authors = [
    { name = "ekoDB Team" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]

[project.urls]
Homepage = "https://github.com/ekoDB/ekodb"
Repository = "https://github.com/ekoDB/ekodb"
Documentation = "https://github.com/ekoDB/ekodb/tree/main/documentation"

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
# E = pycodestyle errors, F = pyflakes (unused imports/vars), W = warnings
ignore = ["W293"]
# W293 = blank line contains whitespace (cosmetic, handled by formatter)

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
# F401 in __init__.py = re-exports, not unused imports

[tool.maturin]
python-source = "python"
module-name = "ekodb_client._ekodb_client"
