[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ekodb-client-python"
version = "0.1.0"
description = "Python client for EkoDB"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",  # Added for async test support
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "requests-mock>=1.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"  # Enable async test support
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=ekodb --cov-report=term-missing"